# groudSeg

./: .gitignore  CMakeLists.txt
src/: groudSeg.cpp
